<resources>
    <string name="app_name">MyMaaap</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'MyMaaap\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>

    <!--    Menü    -->
    <string name="menu_mapStyles">Kartenstil</string>
    <string name="street_mapmenu">Normal</string>
    <string name="hybrid_mapmenu">Hybrid</string>
    <string name="satellite_mapmenu">Satellit</string>
    <string name="terrain_mapmenu">Terrain</string>

    <!--    Verkehrsmittel    -->
    <string name="vmFuß">Fuß</string>
    <string name="vmFahrrad">Fahrrad</string>
    <string name="vmOPNV">ÖPNV</string>
    <string name="vmMIVFahrer">MIV-Fahrer</string>
    <string name="vmMIVMitfahrer">MIV-Mitfahrer</string>
    <string name="vmSonstiges">Sonstiges</string>

    <!--    Standort-Kamera Settings    -->
    <string name="camera_standard">Standard</string>
    <string name="camera_adjZ">followAdjustedZoom</string>
    <string name="camera_free">free_camera</string>


</resources>